<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Udacity Android Project</string>
    <string name="order_dev">Order Development Now</string>
    <string name="projects">Projects</string>
    <string name="vishal_tadha">Vishal Tadha</string>
    <string name="androiddreamz">\@AndroidDreamz</string>
    <string name="android_developer">Android Developer</string>
    <string name="_11">11</string>
    <string name="applications">Applications</string>
    <string name="_05">05</string>
    <string name="clients">Clients</string>
    <string name="_14">14</string>
    <string name="_5k">5K+</string>
    <string name="courses">Courses</string>
    <string name="students">Students</string>
    <string name="_2b">2B+</string>
    <string name="contact_us">Contact Us</string>
    <string name="udacity">Udacity</string>
    <string name="addressLine1">2465 Latham St</string>
    <string name="addressLine2">Mountain View, CA 94043</string>
    <string name="phoneNo">650-555-5555</string>
    <string name="get_it_on">Get it on</string>
    <string name="cricket_dreamz">Cricket Dreamz</string>

    <string name="userWinsMsg">Congratulations !\nYou won the match.</string>
    <string name="userLooseMsg">Oops !\nBetter luck next time.</string>
    <string name="matchTieMsg">Ohhh !\nMatch has been drawn.</string>
    <string name="india_vs_pakistan">India  v Pakistan</string>
    <string name="match_place">Eden Gardens, Kolkata</string>
    <string name="play">Play</string>
    <string name="select_team">1) Select Your Team</string>
    <string name="india">India</string>
    <string name="pakistan">Pakistan</string>
    <string name="continue_word">Continue</string>
    <string name="toss">2) Toss</string>
    <string name="toss_won_msg">You have won the toss</string>
    <string name="choose">Choose</string>
    <string name="bowling">Bowling</string>
    <string name="toss_won2">Opponent won the toss !</string>
    <string name="you_got_a">You got a</string>
    <string name="batting">Batting</string>
    <string name="first">first.</string>
    <string name="vs">vs</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="ind">IND</string>
    <string name="balls">Balls :</string>
    <string name="statistics">Statistics</string>
    <string name="r_left">R Left :</string>
    <string name="w_left">W Left :</string>
    <string name="b_left">B Left :</string>
    <string name="creaze">Creaze</string>
    <string name="you_are">You are</string>
    <string name="runs">Runs</string>
    <string name="wicket">Wicket</string>
    <string name="replay">Replay</string>
    <string name="u00a9_2018_androiddreamz">© 2018 - AndroidDreamz</string>

    <string name="quizResultMessage">Congratulations! You scored <xliff:g id="points" example="5">%d</xliff:g> points.</string>
    <string name="exitQuiz">Exit Quiz?</string>
    <string name="okLabel">Ok</string>
    <string name="cancelLabel">Cancel</string>
    <string name="submitText">Submit</string>
    <string name="selectAnyAnswer">Please select any answer!</string>
    <string name="nextLabel">Next</string>
    <string name="quizdreamz">QuizDreamz</string>
    <string name="live_trivia">Live Trivia</string>
    <string name="game_show">Game Show</string>
    <string name="get_started">Get Started</string>
    <string name="q_no">Q No. </string>
    <string name="scoreLabel">Score : </string>
    <string name="question">Question</string>
    <string name="quit">Quit</string>
    <string name="next">Next</string>
</resources>
